logo alignment fix on mobile - 2

--- a/setup/style/style.css
+++ b/setup/style/style.css
@@ -105,14 +105,20 @@ header {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  padding: 0.5rem;
-  margin:0rem;
-  height: 5rem;
+  padding: 0.5rem !important;
+  margin:0rem !important;
+  height: 5rem !important;
+  max-height: 5rem !important;
+
 }
 
 /* 📱 Mobile Navbar */
 .st-key-navbar-mobile-container .stHorizontalBlock {
   flex-flow:nowrap !important;
+  padding: 0.5rem !important;
+  margin:0rem !important;
+  height: 5rem !important;
+  max-height: 5rem !important;
 }
 
 /* 🖼️ Logo & Popover */
